<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tk.fondomon.activities.CreateRequestActivity"
    tools:showIn="@layout/activity_create_request">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/icon_loan"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/real_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="17dp"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/money_requested"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:padding="5dp"
                        android:hint="@string/amount_money"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_limit"
                    android:textStyle="bold"
                    android:textSize="17dp"/>
                <Spinner
                    android:id="@+id/spinnerTimeLimit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fee"
                    android:textStyle="bold"
                    android:textSize="17dp"/>
                <Spinner
                    android:id="@+id/spinnerFee"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:prompt="@string/fee">
                </Spinner>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/disbursement"
                        android:layout_width="140dp"
                        android:text="@string/date_disbursement"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textSize="15dp"/>
                    <Button
                        android:id="@+id/date"
                        android:text="@string/set_date"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment"
                    android:textStyle="bold"
                    android:textSize="17dp"/>
                <Spinner
                    android:id="@+id/spinnerPayment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:prompt="@string/payment">
                </Spinner>
                <EditText
                    android:id="@+id/inf_additional"
                    android:layout_width="fill_parent"
                    android:layout_height="105dp"
                    android:ems="10"
                    android:hint="@string/info_additional"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLength="180"
                    android:padding="5dp"/>
                <Button
                    android:id="@+id/button_save"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/send"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
